--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
           <img src="img/2.jpg" alt="" class="field-photo">
         </div> -->
         <div class="photo-item">
-          <img src="images/uganda.jpg" alt="" class="field-photo">
+            <img src="images/uganda.jpg" alt="Uganda" style="width:300px; height:auto; border:2px solid red; display:block;">
         </div>
       </div>
 
