--- a/index.html
+++ b/index.html
@@ -522,6 +522,14 @@ section h2:first-child {
 
       <div class="resume-item mb-3">
         <p>
+          <strong>Doremus, J., Zilber Mann, C. Vasilaky, K.</strong>
+          Group-Oriented Messaging and Diversity in Economics: Evidence from a Field Experiment. 
+        </p>
+      </div>
+      }
+      
+      <div class="resume-item mb-3">
+        <p>
           <strong>Vasilaky, K.</strong>
           A Generalized Ridge Regression Using an Iterative Solution: The Inverse Problem in Regression Analysis with a Stopping Rule, Columbia University.
           <br />
